# scrummdidliumcious

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/agents/: copilot-instructions.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
app/: __init__.py  config.py  db.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  admin_config.py  issue.py  participant.py  session.py  team.py  vote.py  voting_card_set.py
app/domain/repositories/: __init__.py  admin_config_repository.py  session_repository.py  team_repository.py  vote_repository.py
app/infra/: __init__.py
app/models/: configuration.py  landing_page_view.py  participant.py  session.py  storage_issue.py  team.py  vote.py
app/realtime/: websocket.py
app/repositories/: configuration_repository.py  session_repository.py  team_repository.py  vote_repository.py
app/routes/: __init__.py  admin.py  home.py  poker_api.py  poker_pages.py
app/services/: csv_issue_import_service.py  realtime_event_service.py  session_service.py  theme_service.py  vote_service.py
app/templates/: base.html  home.html  poker_entry.html  poker_session.html
app/web/: __init__.py  routes_admin.py  routes_sessions.py  sockets.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 002_scrum_poker_initial.py
prompts/plans/: Poker_plan_prompt.md  home_page.md  poker_plan_prompt.md
specs/001-home-landing-page/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-scrum-poker-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-scrum-poker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_home_page_contract.py  test_scrum_poker_session_contract.py  test_scrum_poker_voting_contract.py
tests/integration/: __init__.py  conftest.py  test_home_page_performance.py  test_scrum_poker_realtime.py  test_scrum_poker_responsive_theme.py  test_scrum_poker_session_lifecycle.py
tests/unit/: conftest.py  test_csv_issue_import_service.py  test_domain_entities.py  test_home_page.py  test_inmemory_repos.py  test_scrum_poker_models.py  test_scrum_poker_repositories.py  test_smoke.py  test_theme_service.py  test_vote_service.py
(+34 files in other folders)
