[project]
name = "scrummdidliumcious"
version = "0.1.0"
description = "SCRUM Poker Session Management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-socketio>=5.4.1",
    "sqlalchemy>=2.0.38",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.9.10",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "playwright>=1.50.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
